--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     </div>
       <p><span class="typed" data-typed-items="Software Developer"></span></p>
       <div class="social-links">
-        <a href="https://twitter.com/sturi_ka" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.instagram.com/__.kasturii.__/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a  href="https://github.com/kasturi09"class="social-links"><i class="bx bxl-github"></i></a>
-        <a href="https://join.skype.com/invite/woDabcgDj4DZ" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="https://www.linkedin.com/in/attili-kasturi-9a1913191/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/sturi_ka" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.instagram.com/__.kasturii.__/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+        <a  href="https://github.com/kasturi09"class="social-links" target="_blank"><i class="bx bxl-github"></i></a>
+        <a href="https://join.skype.com/invite/woDabcgDj4DZ" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>
+        <a href="https://www.linkedin.com/in/attili-kasturi-9a1913191/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -288,11 +288,11 @@
     <div class="container">
       <h3>Kasturi Attili</h3>
       <p>Find Me On! <div class="social-links">
-        <a href="https://twitter.com/sturi_ka" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a  href="https://github.com/kasturi09"class="social-links"><i class="bx bxl-github"></i></a>
-        <a href="https://www.instagram.com/__.kasturii.__/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://join.skype.com/invite/woDabcgDj4DZ" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="https://www.linkedin.com/in/attili-kasturi-9a1913191/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/sturi_ka" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+        <a  href="https://github.com/kasturi09"class="social-links" target="_blank"><i class="bx bxl-github"></i></a>
+        <a href="https://www.instagram.com/__.kasturii.__/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+        <a href="https://join.skype.com/invite/woDabcgDj4DZ" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>
+        <a href="https://www.linkedin.com/in/attili-kasturi-9a1913191/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>2021</span></strong>. All Rights Reserved
