--- a/index.html
+++ b/index.html
@@ -220,10 +220,8 @@
             <h5 class="resume-title">Extra-Curricular Activities</h5>
             <div class="resume-item pb-0">
               <ul>
-                <li>Self-motivated & Good communications Skills.</li>
-                <li>Fast Learning and Understanding.</li>
-                <li>Able to easily Interact with a group of people.</li>
-                <li>Pro-active towards  achieving the assigned work.</li>
+                <li>Working as a Member of Publicity in the Institute of Electrical and Electronics Engineers- Computer Society (IEEE-CS) Student Body.</li>
+                <li>Active participation in the National Service Scheme(NSS) and working as an NSS Co-ordinator.</li>
               </ul>
               </div>
           </div>
